# TASK-SCHEDULER

./: Cargo.toml  README.md
docs/: ARCHITECTURE.md  TESTPLAN.md  USER_GUIDE.md  testplan.md  userguide.md
milestones/: MILESTONE_ITEMS.md  week1_proposal_and_planning.md  week2_architecture_and_spike.md  week3_data_layer_and_scanning.md  week4_core_ui_and_actions.md  week5_persistence_and_polish.md  week6_testing_and_hardening.md  week7_beta_and_documentation.md
milestones/code_snapshots/: README.md  rust_week1_skeleton.rs  rust_week2_model.rs  rust_week3_persistence.rs  rust_week4_cli.rs  rust_week5_scheduler.rs  rust_week6_gui_start.rs  rust_week7_final.rs  week1_PROPOSAL.md  week2_ARCHITECTURE.md  week3_DATA.md  week4_UI.md  week5_PERSISTENCE.md  week6_TESTING.md  week7_RELEASE.md
src/: lib.rs  main.rs
tests/: integration_tests.rs
