[package]
name = "iced_task_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "=0.12.1", features = ["tokio", "debug", "advanced"] }
chrono = { version = "=0.4.31", features = ["serde"] }
serde = { version = "=1.0.192", features = ["derive"] }
serde_json = "=1.0.108"
directories = "=5.0.1"
anyhow = "=1.0.75"
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["fmt", "env-filter", "json"] }
tracing-appender = "=0.2.1"
rand = "0.8.5"
tokio = { version = "1.48.0", features = ["time"] }

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
